--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_7
+//        targetCompatibility JavaVersion.VERSION_1_7
+//    }
     productFlavors {
     }
 }
@@ -28,6 +28,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.github.PhilJay:MPAndroidChart:v2.0.8'
-    compile 'com.mbientlab:metawear:1.8.0'
-    //test
+    compile 'com.mbientlab:metawear:2.5.9'
+    compile 'com.android.support:support-v4:21.0.3'
 }
